--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     },
     "author": "Sencha, Inc.",
     "dependencies": {
-        "@sencha/stc-cli": "~1.1.1",
+        "@sencha/stc-cli": "*",
         "node-sauce-connect": "^4.5.0"
     }
 }
